--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,6 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "com.mtj.cy"
@@ -24,7 +23,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
@@ -36,14 +42,16 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha05"
-    implementation "androidx.work:work-runtime:2.2.0"
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
+    api 'androidx.recyclerview:recyclerview:1.0.0'
+    api "androidx.lifecycle:lifecycle-extensions:2.1.0"
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
+    api "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha05"
+    api "androidx.work:work-runtime:2.2.0"
+    api "com.google.android.material:material:1.0.0"
+    api "com.squareup.retrofit2:retrofit:2.6.1"
+    api "com.squareup.retrofit2:converter-gson:2.6.1"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
+
+    api 'com.blankj:utilcode:1.23.6'
 }
