'新增城市切换和手动更新天气功能'

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,8 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+KEY_PATH = D:/FirstCode/key/CaiYun.jks
+KEY_PASS = mtj123456
+ALIAS_NAME = caiyun
+ALIAS_PASS = mtj123456
