优化kotlin的编译速度

--- a/config_build.gradle
+++ b/config_build.gradle
@@ -84,6 +84,19 @@ android {
         experimental = true
     }
 
+    // 优化`transformClassDexBuilderForDebug`的编译速度
+    dexOptions {
+        preDexLibraries true
+        maxProcessCount 8
+    }
+
+    kapt {
+        useBuildCache = true
+        javacOptions {
+            option("-Xmaxerrs", 500)
+        }
+    }
+
 }
 
 dependencies {
