1.玩安卓练习 2.其他库gradle配置

--- a/gradle.properties
+++ b/gradle.properties
@@ -34,7 +34,7 @@ kapt.incremental.apt=true
 kapt.include.compile.classpath=false
 
 #ÊÇ·ñµ¥¶Àµ÷ÊÔ
-isBuildModule=true
+isBuildModule=false
 
 CY_KEY_PATH = D:/FirstCode/key/CaiYun.jks
 CY_KEY_PASS = mtj123456
