--- a/config.gradle
+++ b/config.gradle
@@ -22,8 +22,6 @@ ext {
     ]
 
     dependencies = [
-            "kotlin"                       : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions['kotlin']}",
-
             "constraintlayout"             : "androidx.constraintlayout:constraintlayout:${versions['constraintlayout']}",
 
             "appcompat"                    : "androidx.appcompat:appcompat:${versions['appcompat']}",
@@ -76,6 +74,8 @@ ext {
             "SmartRefreshLayout"           : "com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14",
             //"SmartRefreshHeader"  : "com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-14",//没有使用特殊Header，可以不加这行
 
+            "BRVAH"                        : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4',
+
             //glide图片加载
             "glide"                        : "com.github.bumptech.glide:glide:4.9.0",
 
@@ -83,8 +83,6 @@ ext {
             "BasePopup"                    : "com.github.razerdp:BasePopup:2.2.1",
 
             "multidex"                     : "com.android.support:multidex:1.0.3",
-
-            "cardview"                     : "com.android.support:cardview-v7:28.0.0",
 
             "eventbus"                     : "org.greenrobot:eventbus:3.1.1",
 
@@ -102,13 +100,9 @@ ext {
 
             "circleimageview"              : "de.hdodenhof:circleimageview:2.2.0",
 
-            "bga-refreshlayout"            : "cn.bingoogolapple:bga-refreshlayout:1.1.7",
-
             "permission"                   : "com.yanzhenjie.permission:support:2.0.1",
 
             "zxing"                        : "com.journeyapps:zxing-android-embedded:3.6.0",
-
-            "lottie"                       : "com.airbnb.android:lottie:2.3.1",
 
             "aspectjrt"                    : "org.aspectj:aspectjrt:1.9.2"
 
