高德地图查询附近和定位的Demo

--- a/gradle.properties
+++ b/gradle.properties
@@ -34,9 +34,14 @@ kapt.incremental.apt=true
 kapt.include.compile.classpath=false
 
 #ÊÇ·ñµ¥¶Àµ÷ÊÔ
-isBuildModule=false
+isBuildModule=true
 
 CY_KEY_PATH = D:/FirstCode/key/CaiYun.jks
 CY_KEY_PASS = mtj123456
 CY_ALIAS_NAME = caiyun
 CY_ALIAS_PASS = mtj123456
+
+MAP_KEY_PATH = ../model_map/map.jks
+MAP_KEY_PASS = 123456
+MAP_ALIAS_NAME = map
+MAP_ALIAS_PASS = 123456
