--- a/config.gradle
+++ b/config.gradle
@@ -71,8 +71,8 @@ ext {
             "converter-gson"               : "com.squareup.retrofit2:converter-gson:2.6.1",
 
             //加载控件
-            "SmartRefreshLayout"           : "com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14",
-            //"SmartRefreshHeader"  : "com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-14",//没有使用特殊Header，可以不加这行
+            "smart_layout"                 : 'com.scwang.smart:refresh-layout-kernel:2.0.1',    //核心必须依赖
+            "smart_classics"               : 'com.scwang.smart:refresh-header-classics:2.0.1',   //经典刷新头
 
             "BRVAH"                        : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4',
 
@@ -80,7 +80,7 @@ ext {
             "glide"                        : "com.github.bumptech.glide:glide:4.9.0",
 
             //popupwindow
-            "BasePopup"                    : "com.github.razerdp:BasePopup:2.2.1",
+            "BasePopup"                    : "com.github.razerdp:BasePopup:2.2.9",
 
             "multidex"                     : "com.android.support:multidex:1.0.3",
 
@@ -92,7 +92,7 @@ ext {
 
             "loopView"                     : "com.weigan:loopView:0.1.2",
 
-            "BaseRecyclerViewAdapterHelper": "com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30",
+            "BaseRecyclerViewAdapterHelper": 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4',
 
             "PhotoView"                    : "com.github.chrisbanes:PhotoView:2.1.3",
 
@@ -104,7 +104,9 @@ ext {
 
             "zxing"                        : "com.journeyapps:zxing-android-embedded:3.6.0",
 
-            "aspectjrt"                    : "org.aspectj:aspectjrt:1.9.2"
+            "aspectjrt"                    : "org.aspectj:aspectjrt:1.9.2",
+
+            "immersionbar"                 : "com.gyf.immersionbar:immersionbar:3.0.0"
 
     ]
 }
